--- a/Translations/The Coatinc Company Holding GmbH.g.xlf
+++ b/Translations/The Coatinc Company Holding GmbH.g.xlf
@@ -1033,11 +1033,6 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Report TCC Goods Receipt Slip - ReportLabel ColorLbl</note>
         </trans-unit>
-        <trans-unit id="Report 820218778 - ReportLabel 3490088608" size-unit="char" translate="yes" xml:space="preserve">
-          <source>Confirmation Number</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">Report TCC Goods Receipt Slip - ReportLabel ConfirmationNoLbl</note>
-        </trans-unit>
         <trans-unit id="Report 820218778 - ReportLabel 1126961196" size-unit="char" translate="yes" xml:space="preserve">
           <source>Date Delivery</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -1067,6 +1062,11 @@
           <source>Estimated Delivery Date</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">Report TCC Goods Receipt Slip - ReportLabel EstimatedDeliceryDateLbl</note>
+        </trans-unit>
+        <trans-unit id="Report 820218778 - ReportLabel 983219472" size-unit="char" translate="yes" xml:space="preserve">
+          <source>Good Receipt Number</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">Report TCC Goods Receipt Slip - ReportLabel GoodReceiptNoLbl</note>
         </trans-unit>
         <trans-unit id="Report 820218778 - ReportLabel 2963208439" size-unit="char" translate="yes" xml:space="preserve">
           <source>H</source>
@@ -1518,6 +1518,16 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCC Sales Order CO Whse - Control CO Whse. Receip - Property Caption</note>
         </trans-unit>
+        <trans-unit id="PageExtension 1800422648 - Action 1692211685 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 9309876">
+          <source>Take Picture</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCC User Task Card - Action MuM GRD Take Picture - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 1800422648 - Control 2352445403 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 9309876">
+          <source>DropZone</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCC User Task Card - Control MuM DZ DropZone Factbox - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PageExtension 3415156606 - Control 3056029483 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 225437410">
           <source>Warehouse Receipt</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -1532,6 +1542,11 @@
           <source>Select value,Empty</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension TCCResponsibilityCenter - Control User Name for User Tasks - Method OnAssistEdit - NamedType AssistLbl</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 3664236174 - Field 2292030083 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3442823154">
+          <source>User Task ID</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension TCC MuM MS Media Storage - Field User Task ID - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 4007689046 - Field 3818038736 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 1192395785">
           <source>Created By</source>
@@ -1597,6 +1612,11 @@
           <source>MuM Goods Receipt Whse. Receipt Header</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">EnumExtension TCC Event Category - EnumValue CCT MuM GR Whse. Receipt Events - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="EnumExtension 2236776217 - EnumValue 1137425740 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Enum 683993445">
+          <source>User Task</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">EnumExtension TCC MuM MS MediaStorage Source - EnumValue TCC User Task - Property Caption</note>
         </trans-unit>
       </group>
     </body>
